--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="logo-container">
-            <div class="logo"><img src="negocio_la/imagens/logocmcc.png" alt=""></div>
+            <div class="logo"><img src="imagens/logocmcc.png" alt="" class="img"></div>
         </div>
         <div class="login-container">
             <div class="login-form">
@@ -28,8 +28,14 @@
                         <input type="password" id="senha" name="senha" required>
                     </div>
                     <div class="form-group">
-                        <label for="funcao">Função:</label>
-                        <input type="checkbox" id="funcao" name="funcao">
+                   <form action="/action_page.php">
+                   <label for="cars">função</label><br>
+                    <select id="cars" name="cars">
+                  <option value="volvo">diretor(a)</option>
+                   <option value="saab">pedagogo(a)</option>
+                    <option value="fiat">monitor(a)</option>
+      </select>
+            </form>
                     </div>
                   <a href="loginpt2.html"><button type="submit" class="btn-login">LOGAR</button> </a> 
                 </form>
