--- a/base.html
+++ b/base.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="logo-container">
             <div class="logo">
-                <img src="/api/placeholder/60/60" alt="Logo Institucional">
+                <img src=imagens/logocmcc.png alt="Logo Institucional">
             </div>
         </div>
         
