--- a/base.html
+++ b/base.html
@@ -14,7 +14,7 @@
         <div class="logo-container">
             <div class="logo">
                 <!-- Placeholder para o logo institucional -->
-                <img src="/api/placeholder/60/60" alt="Logo Institucional">
+                <img src="imagens/logocmcc.png" alt="Logo Institucional">
             </div>
         </div>
         
