--- a/fato.html
+++ b/fato.html
@@ -91,7 +91,7 @@
             </svg>
         </button>
     </header>
-    <main></main>
+    <main>
     <!-- Container principal da aplicação -->
     <div class="container">
         <!-- Cabeçalho da página -->
