--- a/freq.html
+++ b/freq.html
@@ -36,7 +36,7 @@
                 <div class="nav-text">CONSULTA</div>
             </a>
             <!-- Item de navegação: Cadastro -->
-            <a href="cadastro.html" class="nav-item">
+            <a href="index.html" class="nav-item">
                 <div class="nav-icon-container">
                     <!-- Ícone de pessoa SVG -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
