--- a/index.html
+++ b/index.html
@@ -250,14 +250,8 @@
                                 <select id="aluno-curso" name="curso" required>
                                     <option value="">Selecione</option>
                                     <option value="administracao">Administração</option>
-                                    <option value="direito">Direito</option>
-                                    <option value="medicina">Medicina</option>
-                                    <option value="engenharia">Engenharia</option>
-                                    <option value="computacao">Ciência da Computação</option>
-                                    <option value="psicologia">Psicologia</option>
-                                    <option value="enfermagem">Enfermagem</option>
-                                    <option value="arquitetura">Arquitetura e Urbanismo</option>
-                                    <option value="contabilidade">Contabilidade</option>
+                                    <option value="computacao">turismo</option>
+                                    <option value="computacao">desenvolvimento de sistemas</option>
                                     <option value="outro">Outro</option>
                                 </select>
                             </div>
@@ -269,14 +263,6 @@
                                         <option value="">Selecione</option>
                                         <option value="1">1º Período</option>
                                         <option value="2">2º Período</option>
-                                        <option value="3">3º Período</option>
-                                        <option value="4">4º Período</option>
-                                        <option value="5">5º Período</option>
-                                        <option value="6">6º Período</option>
-                                        <option value="7">7º Período</option>
-                                        <option value="8">8º Período</option>
-                                        <option value="9">9º Período</option>
-                                        <option value="10">10º Período</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
@@ -285,8 +271,6 @@
                                         <option value="">Selecione</option>
                                         <option value="matutino">Matutino</option>
                                         <option value="vespertino">Vespertino</option>
-                                        <option value="noturno">Noturno</option>
-                                        <option value="integral">Integral</option>
                                     </select>
                                 </div>
                             </div>
@@ -521,32 +505,12 @@
                                         <option value="">Selecione</option>
                                         <option value="professor">Professor</option>
                                         <option value="secretario">Secretário(a)</option>
-                                        <option value="coordenador">Coordenador(a)</option>
+                                        <option value="coordenador">Pedagogo(a)</option>
                                         <option value="diretor">Diretor(a)</option>
                                         <option value="bibliotecario">Bibliotecário(a)</option>
-                                        <option value="auxiliar-administrativo">Auxiliar Administrativo</option>
                                         <option value="tecnico-laboratorio">Técnico de Laboratório</option>
-                                        <option value="ti">TI</option>
-                                        <option value="outro">Outro</option>
                                     </select>
                                 </div>
-                                <div class="form-group">
-                                    <label class="required" for="func-departamento">Departamento</label>
-                                    <select id="func-departamento" name="departamento" required>
-                                        <option value="">Selecione</option>
-                                        <option value="administrativo">Administrativo</option>
-                                        <option value="financeiro">Financeiro</option>
-                                        <option value="rh">Recursos Humanos</option>
-                                        <option value="ti">Tecnologia da Informação</option>
-                                        <option value="biblioteca">Biblioteca</option>
-                                        <option value="ciencias-humanas">Ciências Humanas</option>
-                                        <option value="ciencias-exatas">Ciências Exatas</option>
-                                        <option value="ciencias-biologicas">Ciências Biológicas</option>
-                                        <option value="ciencias-saude">Ciências da Saúde</option>
-                                        <option value="outro">Outro</option>
-                                    </select>
-                                </div>
-                            </div>
                             
                             <div class="form-row">
                                 <div class="form-group">
@@ -558,7 +522,6 @@
                                     <select id="func-tipo-contrato" name="tipo_contrato" required>
                                         <option value="">Selecione</option>
                                         <option value="clt">CLT</option>
-                                        <option value="pj">Pessoa Jurídica</option>
                                         <option value="temporario">Temporário</option>
                                         <option value="estagio">Estágio</option>
                                         <option value="outro">Outro</option>
