--- a/loginpt2.html
+++ b/loginpt2.html
@@ -15,7 +15,7 @@
             <h1 class="content-title">O QUE ALGUMA COISA<br>PARA ESCOLHER</h1>
             <!-- botao consulta -->
             <div class="buttons-container">
-                <a href="base.html" class="nav-button">
+                <a href="consulta.html" class="nav-button">
                     <div class="button-icon consulta-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <circle cx="11" cy="11" r="8"></circle>
