--- a/freq.html
+++ b/freq.html
@@ -22,7 +22,7 @@
         <!-- Navegação principal -->
         <nav class="nav-container" id="navContainer">
             <!-- Item de navegação: Consulta -->
-            <a href="base.html" class="nav-item">
+            <a href="consulta.html" class="nav-item">
                 <div class="nav-icon-container">
                     <!-- Ícone de lupa SVG -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
